# computer-vision-based-attendance-marking-system

./: CMakeLists.txt  README.md  attendance.csv  attendance_tracker.cpp  attendance_tracker.h  face_recognition.cpp  face_recognition.h  main.cpp  register_face.cpp  register_face.h
